tree-sitter-tsql/test/corpus/execute_option.txt
=====================================
execute_options
=====================================

EXECUTE sp_help WITH RECOMPILE, RESULT SETS UNDEFINED
---

(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (func_proc_name_server_database_schema
              (func_proc_name_database_schema
                (func_proc_name_schema
                  (id_))))
            (WITH)
            (execute_option
              (RECOMPILE))
            (execute_option
              (RESULT_SETS)
              (UNDEFINED))))))))
